@@ -22,6 +22,7 @@ import org.swyp.dessertbee.user.service.UserServiceImpl;
 
 import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.UUID;
@@ -112,7 +113,7 @@ public class MateController {
             @RequestParam(required = false, defaultValue = "10") int to,
             @RequestParam(required = false, defaultValue = "") String keyword,
             @RequestParam(required = false) Long mateCategoryId
-    ) throws UnsupportedEncodingException {
+    ) {
 
         if (from >= to) {
             throw new FromToMateException("잘못된 범위 요청입니다.");
@@ -122,7 +123,9 @@ public class MateController {
         int page = from / size;
         Pageable pageable = PageRequest.of(page, size);
 
-        keyword = URLDecoder.decode(keyword,"UTF-8");
+        if(keyword != null) {
+            keyword = URLDecoder.decode(keyword, StandardCharsets.UTF_8);
+        }
         return ResponseEntity.ok(mateService.getMates(pageable, keyword, mateCategoryId));
     }
 
